--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,6 +1,6 @@
-body {
-    display: flex;
-    flex-direction: column;
+html, body {
+    height: 100%;
+    margin: 0;
   }
 
 .headerColor{
@@ -10,13 +10,28 @@ body {
 
 .headerSize{
     padding: 15px;
-
 }
 
 .rightSpan{
     float: right;
 }
 
-.footerSize{
-    flex-shrink: 0;
+.wrapper {
+    min-height: 100%;
+  
+    /* Equal to height of footer */
+    /* But also accounting for potential margin-bottom of last child */
+    margin-bottom: -50px;
+  }
+
+.footerSize{      
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    padding-left: 15px;
+    padding-right: 15px; 
+    padding-top: 5px;
+    padding-bottom: 5px;   
+    width: 100%;
+    overflow: hidden;
 }
