Header, footer, example of dom change

--- a/views/modules/start.ejs
+++ b/views/modules/start.ejs
@@ -1,1 +1,13 @@
-<h2>THIS IS STARTA</h2>
+<div>
+    <button id="addbtnbtn">Add label</button>
+    <div id="labeldiv"> 
+        <label>First label</label>
+    </div>
+    <!-- <div class="leftDiv column">
+        <img src="pres1.jpg" alt="Snow">
+    </div>
+    <div class="rightDiv column">
+        <img src="man.jpg" alt="Forest">
+    </div> -->
+
+</div>
