--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -16,14 +16,6 @@ html, body {
     float: right;
 }
 
-.wrapper {
-    min-height: 100%;
-  
-    /* Equal to height of footer */
-    /* But also accounting for potential margin-bottom of last child */
-    margin-bottom: -50px;
-  }
-
 .footerSize{      
     position: absolute;
     left: 0;
@@ -35,3 +27,26 @@ html, body {
     width: 100%;
     overflow: hidden;
 }
+
+.leftDiv{
+    float: left;
+    min-width: 50%;
+    max-width: 50%;
+    min-height: 100%;
+    position: fixed;    
+}
+
+.rightDiv{
+    float: right;
+    min-width: 50%;
+    max-width: 50%;
+    min-height: 100%;
+    background-size: cover;
+    position: fixed;
+    margin-left: 50% !important;
+}
+
+.column {
+    float: left;
+    width: 50%;
+  }
