--- a/views/modules/start.ejs
+++ b/views/modules/start.ejs
@@ -1,13 +1,14 @@
 <div>
-    <button id="addbtnbtn">Add label</button>
+    <!-- <button id="addbtnbtn">Add label</button>
     <div id="labeldiv"> 
         <label>First label</label>
-    </div>
-    <!-- <div class="leftDiv column">
-        <img src="pres1.jpg" alt="Snow">
+    </div> -->
+    <div class="leftDiv column">
+        <!-- <button class="startpagebtn startpagebtn_user"> fff </button> -->
+        <img id="userBtn" src="userbtn.png" class="startpagebtn">
     </div>
     <div class="rightDiv column">
-        <img src="man.jpg" alt="Forest">
-    </div> -->
+        <img id="truckBtn" src="truck.png" class="startpagebtn">
+    </div>
 
 </div>
