--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <div class="headerColor footerSize">
     <span>
-        (Logo)
-    </span>
+            <img src="icon.png" class="footerIcon">           
+        </span>
     <span class="rightSpan">
         Log af osv.
     </span>
