--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
     <div class="headerColor headerSize">
         <div>
             <span>
-                    (Logo)            
+                <img src="icon.png" class="headerIcon">           
             </span>
             <span class="rightSpan">
                 Log af osv.
