--- a/views/modules/start.ejs
+++ b/views/modules/start.ejs
@@ -5,10 +5,10 @@
     </div> -->
     <div class="leftDiv column">
         <!-- <button class="startpagebtn startpagebtn_user"> fff </button> -->
-        <img id="userBtn" src="userbtn.png" class="startpagebtn">
+        <img id="userBtn" src="userbtn.png" class="startpagebtn  hover">
     </div>
     <div class="rightDiv column">
-        <img id="truckBtn" src="truck.png" class="startpagebtn">
+        <img id="truckBtn" src="truck.png" class="startpagebtn  hover">
     </div>
 
 </div>
