--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,9 @@
 <div class="headerColor footerSize">
     <span>
-            <img src="icon.png" class="footerIcon">           
+            <img src="icon.png" class="footerIcon"> 
+        <label class="tinyLbl">
+            Est. 2019         
+        </label>
         </span>
     <span class="rightSpan">
         Log af osv.
