--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,10 +10,12 @@
     <div class="headerColor headerSize">
         <div>
             <span>
-                <img src="icon.png" class="headerIcon">           
+                <img id="homeBtn" src="icon.png" class="headerIcon hover">           
             </span>
             <span class="rightSpan">
-                Log af osv.
+                <button class="headerBtn hover">Kontakt</button>
+                <button class="headerBtn hover">Om os</button>
+                <button class="headerBtn hover">Log af</button>
             </span>
         </div>
     </div>
