--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -23,12 +23,13 @@
     crossorigin="anonymous">
 
 <!-- <script src="https://unpkg.com/d3"></script> -->
-<link href="/style.css" rel="stylesheet" />
+<link href="/stylesheet.css" rel="stylesheet" />
 
 
 
 <!-- Include scripts -->
 <script src="/start.js"></script>
+<script src="/searchResult.js"></script>
 
 <!-- Titel -->
 <title>
