--- a/views/modules/searchResult.ejs
+++ b/views/modules/searchResult.ejs
@@ -1,4 +1,17 @@
 
 <li>
+    <div>
+        <div class='pickUpDiv'>
+            <%- job.pickUpLocation %>
+            <%- job.pickUpDateTime %>
+            
+        </div>
+        <div class='destinationDiv'>
+
+        </div>
+        <div>
+
+        </div>
+    </div>
     <%- job.destination %>
 </li>
