about, contact, logout route

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,9 +13,9 @@
                 <img id="homeBtn" src="icon.png" class="headerIcon hover">           
             </span>
             <span class="rightSpan">
-                <button class="headerBtn hover">Kontakt</button>
-                <button class="headerBtn hover">Om os</button>
-                <button class="headerBtn hover">Log af</button>
+                <button id="contactBtn" class="headerBtn hover">Kontakt</button>
+                <button id="aboutBtn" class="headerBtn hover">Om os</button>
+                <button id="logoutBtn" class="headerBtn hover">Log af</button>
             </span>
         </div>
     </div>
