--- a/views/modules/login.ejs
+++ b/views/modules/login.ejs
@@ -1,15 +1,22 @@
-<div class="container">
-        <h2>Login</h2>
+<div class="container centeredDiv loginDiv">
+  <p></p>
+  <h2>Login</h2>
+  <p></p>
+
   <p>
-    <label><b>Brugernavn</b></label></p>
-    <p>
-    <input name="uname" type="text" id ="uname"></p>
-    <p>
-    <label id = "pass"><b>Password</b></label></p>
-    <p>
-    <input name="pass" type="text" id ="upass"></p>
-    <p>
-    <button id="loginForm">Login</button>
-    <button id="RegisterUser">Opret bruger</button></p>
+    <p></p>
+    <input name="uname" type="text" id="uname" placeholder="Indtast brugernavn" class="customTb">
+
+  </p>
+
+  <p></p>
+
+  <input name="pass" type="password" id="upass" placeholder="Indtast kodeord" class="customTb">
+  <p></p>
+  <div>
+    <button id="RegisterUser" class="customBtn">Opret bruger</button>
+    <button id="loginForm" class="customBtn rightBtn">Login</button>
+
+  </div>
 
 </div>
