--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,8 +15,8 @@
             <span class="rightSpan">
                 <button id="contactBtn" class="headerBtn hover">Kontakt</button>
                 <button id="aboutBtn" class="headerBtn hover">Om os</button>
-                <button id="logoutBtn" class="headerBtn hover">Log af</button>
-            </span>
+                <button id="loginBtn" class="headerBtn hover btnShown">Log ind </button>
+                <button id="logoutBtn" class="headerBtn hover btnHidden">Log ud </button>
         </div>
     </div>
 
