--- a/views/modules/search.ejs
+++ b/views/modules/search.ejs
@@ -113,10 +113,10 @@
             </div>
         </div>
 
-        <button type="submit" value="Submit" id="searchbtn">
+        <button type="submit" class="customBtn" id="searchbtn">Søg</button>
 
     </form>
-    <div>
+    <div class="row">
         <% if (foundJobs) { %>
         <table class='leepwaytable table'id='resulttable'>
             
@@ -124,6 +124,7 @@
         <% } else { %>
         <label>Indtast søgeparametre</label>
         <% } %>
+        <% include ../modules/bid %>
     </div>
 </div>
 
