--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -21,7 +21,7 @@ html, body {
 }
 
 .footerSize{      
-    position: absolute;
+    position: fixed;
     left: 0;
     bottom: 0;
     padding-left: 15px;
@@ -42,6 +42,7 @@ html, body {
     align-items: center;
     justify-content: center;
 }
+
 
 .rightDiv{
     float: right;
@@ -84,6 +85,7 @@ html, body {
   
 .headerIcon {
     height: 40px;
+    padding:10px;
 }
 
 .footerIcon{
